# assignment02

./: .gitignore  How-to.md  README.md  Refactorization.md  __init__.py  check_gpu.py  documentation.md  ignore_me_migrate_model.py  main.py  pyproject.toml  refactor.md  refactoring.md  run_basic.py  run_dqn.py  run_dr_env.py  run_eval_ql.py  run_eval_sarsa.py  run_full_move_to_beacon.py  run_ql.py  run_sarsa.py
Lectures/Lecture 1 - Introduction to RL& Foundations (Part 1/: 3).md
agents/: NN_model.py  abstractAgent.py  basicAgent.py  dqnAgent.py  factory.py  qlAgent.py  randomAgent.py  reinforceAgent.py  sarsaAgent.py  tableAgent.py
configs/: basic_agent_discrete.yaml  ddqn_cnn_eval_defeat_roaches.yaml  ddqn_cnn_eval_move_to_beacon_full.yaml  ddqn_cnn_train_defeat_roaches.yaml  ddqn_cnn_train_move_to_beacon_full.yaml  ddqn_fcn_eval_move_to_beacon_discrete.yaml  ddqn_fcn_train_move_to_beacon_discrete.yaml  dqn_cnn_eval_defeat_roaches.yaml  dqn_cnn_train_defeat_roaches.yaml  dqn_cnn_train_move_to_beacon_full.yaml  dqn_fcn_eval_move_to_beacon_discrete.yaml  dqn_fcn_train_move_to_beacon_discrete.yaml  dqn_train_defeat_roaches.yaml  ql_eval_discrete.yaml  random_agent_discrete.yaml  reinforce_move_to_beacon_discrete.yaml  sarsa_eval_discrete.yaml  sarsa_move_to_beacon.yaml
env/: dr_env.py  env_discrete.py  env_full.py  factory.py  utils.py
models/250508_0748_QLearningAgent/: qlagent.pt
models/250508_1145_SARSAAgent/: qlagent.pt
networks/: architectures.py  base.py  factory.py
runner/: runner.py
utils/: check_gpu.py  experiment_utils.py  plot_results.py
(+13 files in other folders)
